# rust-graphql-blog

./: Cargo.toml  README.md
src/: main.rs  model.rs
